Creando botones y casillas de texto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
         <title>Encriptador</title>
     </head>
     <body>
-        
+        <input type="text" class="casilla-de-texto">
+        <div class="botones-texto">
+            <input type="submit" value="Encriptar">
+            <input type="submit" value="Desencriptar" id="boton-desencriptar">
+        </div>
+        <div class="mensaje">
+            <p>Mensaje Obtenido</p>
+            <input type="text" class="mensaje-mostrado">
+        </div>
     </body>
     <footer>
 
