Función copiar creada

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
         <title>Encriptador</title>
     </head>
     <body>
-        <input type="text" class="casilla-de-texto">
+        <textarea cols="30" rows="10" class="casilla-de-texto"></textarea> 
         <div class="botones-texto">
-            <input type="submit" value="Encriptar" onclick="encriptar()">
+            <input type="submit" value="Encriptar" onclick="encriptar()" id="boton-encriptar">
             <input type="submit" value="Desencriptar" onclick="desencriptar()" id="boton-desencriptar">
         </div>
         <div class="mensaje">
             <p>Mensaje Obtenido</p>
             <input type="text" class="mensaje-mostrado">
+            <button onclick="copiar()">Copiar</button>
         </div>
         <script>
             function encriptar(){
@@ -29,11 +30,15 @@
                 var texto = document.querySelector(".casilla-de-texto").value;
                 var textoCifrado = texto.replace(/ai/gi, "a").replace(/enter/gi, "e").replace(/imes/gi, "i").replace(/ober/gi, "o").replace(/ufat/gi, "u");
                 document.querySelector(".mensaje-mostrado").value= textoCifrado;
-                document.querySelector("#boton-desencriptar");
+                document.querySelector("#boton-desencriptar").value;
+            }
+
+            function copiar() {
+                var mensajeMostrado = document.querySelector(".mensaje-mostrado").value;
+                navigator.clipboard.writeText(mensajeMostrado);
             }
         </script>
     </body>
     <footer>
-
     </footer>
 </html>
