Background y textarea mejorado, HTML y CSS mejorado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html>
     <head>
         <meta charset="UTF-8">
@@ -9,16 +8,11 @@
         <title>Encriptador</title>
     </head>
     <body>
-        <section class="background-y-texto">
-            <div class="caja-de-texto">
-                <img src="imagenes/fondo.jpg" class="imagen">
+        <section class="background-texto-botones">
+            <div class="imagen">
                 <textarea class="casilla-de-texto"></textarea>
-            </div>
-        </section>
-        <section>
-            <div class="botones-de-funcion">
-                <input type="submit" value="Encriptar" onclick="encriptar()" id="boton-encriptar">
-                <input type="submit" value="Desencriptar" onclick="desencriptar()" id="boton-desencriptar">
+                <input type="submit" value="Encriptar" onclick="encriptar()" class="botones" id="boton-encriptar">
+                <input type="submit" value="Desencriptar" onclick="desencriptar()" class="botones" id="boton-desencriptar">
             </div>
         </section>
         <div class="mensaje">
