--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="widht=device-widht">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="reset.css">
-        <title>Encriptador</title>
-    </head>
-    <body>
-        <section class="background-texto-botones">
-            <div class="imagen">
-                <textarea class="casilla-de-texto"></textarea>
-                <input type="submit" value="Encriptar" onclick="encriptar()" class="botones" id="boton-encriptar">
-                <input type="submit" value="Desencriptar" onclick="desencriptar()" class="botones" id="boton-desencriptar">
-            </div>
-        </section>
-        <div class="mensaje">
-            <p>Mensaje Obtenido</p>
-            <input type="text" class="mensaje-mostrado">
-            <button onclick="copiar()">Copiar</button>
-        </div>
-        <script>
-            function encriptar(){
-                    var texto = document.querySelector(".casilla-de-texto").value;
-                    var textoCifrado = texto.replace(/e/gi, "enter").replace(/i/gi, "imes").replace(/a/gi, "ai").replace(/o/gi, "ober").replace(/u/gi, "ufat");
-                    document.querySelector(".mensaje-mostrado").value= textoCifrado;
-                    document.querySelector("#boton-encriptar").value;
-                }
-            function desencriptar(){
-                var texto = document.querySelector(".casilla-de-texto").value;
-                var textoCifrado = texto.replace(/ai/gi, "a").replace(/enter/gi, "e").replace(/imes/gi, "i").replace(/ober/gi, "o").replace(/ufat/gi, "u");
-                document.querySelector(".mensaje-mostrado").value= textoCifrado;
-                document.querySelector("#boton-desencriptar").value;
-            }
 
-            function copiar(){
-                var mensajeMostrado = document.querySelector(".mensaje-mostrado").value;
-                navigator.clipboard.writeText(mensajeMostrado);
-            }
-        </script>
-    </body>
-    <footer>
-    </footer>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="widht=device-widht">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <title>Encriptador</title>
+</head>
+
+<body>
+    <section class="background-texto-botones">
+        <div class="imagen">
+            <textarea class="casilla-de-texto"></textarea>
+            <!-- creación de contendedor para los botones -->
+            <div class="botones">
+                <input type="submit" value="Encriptar" onclick="encriptar()" class="botones" id="boton-encriptar">
+                <input type="submit" value="Desencriptar" onclick="desencriptar()" class="botones"
+                    id="boton-desencriptar">
+            </div>
+        </div>
+    </section>
+    <div class="mensaje">
+        <p>Mensaje Obtenido</p>
+        <input type="text" class="mensaje-mostrado">
+        <button onclick="copiar()">Copiar</button>
+    </div>
+    <script>
+        function encriptar() {
+            var texto = document.querySelector(".casilla-de-texto").value;
+            var textoCifrado = texto.replace(/e/gi, "enter").replace(/i/gi, "imes").replace(/a/gi, "ai").replace(/o/gi, "ober").replace(/u/gi, "ufat");
+            document.querySelector(".mensaje-mostrado").value = textoCifrado;
+            document.querySelector("#boton-encriptar").value;
+        }
+        function desencriptar() {
+            var texto = document.querySelector(".casilla-de-texto").value;
+            var textoCifrado = texto.replace(/ai/gi, "a").replace(/enter/gi, "e").replace(/imes/gi, "i").replace(/ober/gi, "o").replace(/ufat/gi, "u");
+            document.querySelector(".mensaje-mostrado").value = textoCifrado;
+            document.querySelector("#boton-desencriptar").value;
+        }
+
+        function copiar() {
+            var mensajeMostrado = document.querySelector(".mensaje-mostrado").value;
+            navigator.clipboard.writeText(mensajeMostrado);
+        }
+    </script>
+</body>
+<footer>
+</footer>
+
 </html>
