--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
 <body>
     <section class="background-texto-botones">
         <div class="imagen">
-            <textarea class="casilla-de-texto" placeholder="Utilizar sólo letras minúsculas y sin caracteres especiales"></textarea>
+            <textarea class="casilla-de-texto" placeholder="Utilizar sólo letras minúsculas y sin caracteres especiales."></textarea>
             <div class="botones">
                 <input type="submit" value="Encriptar" onclick="encriptar()" class="botones" id="boton-encriptar">
                 <input type="submit" value="Desencriptar" onclick="desencriptar()" class="botones" id="boton-desencriptar">
             </div>
         </div>
     </section>
-    <div class="mensaje">
-        <input type="text" class="mensaje-mostrado" disabled>
-        <button onclick="copiar()">Copiar</button>
-    </div>
-    <script>
+    <section class="mensaje-y-copiar">
+        <div class="mensaje">
+            <textarea class="mensaje-mostrado" disabled></textarea>
+        </div>
+        <div class="boton-copiar">
+            <button onclick="copiar()" class="boton-copiar">Copiar</button>
+        </div>  
+    </section>
+        <script>
         function encriptar() {
             var texto = document.querySelector(".casilla-de-texto").value;
             var textoCifrado = texto.replace(/e/gi, "enter").replace(/i/gi, "imes").replace(/a/gi, "ai").replace(/o/gi, "ober").replace(/u/gi, "ufat");
