--- a/index.html
+++ b/index.html
@@ -1,56 +1,58 @@
 <!doctype html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="widht=device-widht">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
-    <title>Encriptador</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="widht=device-widht">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
+        <title>Encriptador</title>
+    </head>
 
-<body>
-    <section class="background-texto-botones">
-        <div class="imagen">
-            <textarea class="casilla-de-texto" placeholder="Utilizar sólo letras minúsculas y sin caracteres especiales."></textarea>
-            <div class="botones">
-                <input type="submit" value="Encriptar" onclick="encriptar()" class="botones" id="boton-encriptar">
-                <input type="submit" value="Desencriptar" onclick="desencriptar()" class="botones" id="boton-desencriptar">
+    <body>
+        <section class="background-texto-botones">
+            <div class="imagen">
+                <textarea class="casilla-de-texto" placeholder="Utilizar sólo letras minúsculas y sin caracteres especiales."></textarea>
+                <div class="botones">
+                    <input type="submit" value="Encriptar" onclick="encriptar()" class="botones" id="boton-encriptar">
+                    <input type="submit" value="Desencriptar" onclick="desencriptar()" class="botones" id="boton-desencriptar">
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="mensaje-y-copiar">
-        <div class="mensaje">
-            <textarea class="mensaje-mostrado" disabled></textarea>
-        </div>
-        <div class="boton-copiar">
-            <button onclick="copiar()" class="boton-copiar">Copiar</button>
-        </div>  
-    </section>
-        <script>
-        function encriptar() {
-            var texto = document.querySelector(".casilla-de-texto").value;
-            var textoCifrado = texto.replace(/e/gi, "enter").replace(/i/gi, "imes").replace(/a/gi, "ai").replace(/o/gi, "ober").replace(/u/gi, "ufat");
-            document.querySelector(".mensaje-mostrado").value = textoCifrado;
-            document.querySelector("#boton-encriptar").value;
-        }
-        function desencriptar() {
-            var texto = document.querySelector(".casilla-de-texto").value;
-            var textoCifrado = texto.replace(/ai/gi, "a").replace(/enter/gi, "e").replace(/imes/gi, "i").replace(/ober/gi, "o").replace(/ufat/gi, "u");
-            document.querySelector(".mensaje-mostrado").value = textoCifrado;
-            document.querySelector("#boton-desencriptar").value;
-        }
+        </section>
+        <section class="mensaje-y-copiar">
+            <div class="fondo-de-mensaje">
+                <div class="mensaje">
+                    <textarea class="mensaje-mostrado" disabled></textarea>
+                </div>    
+            </div>
+            <div class="boton-copiar">
+                <button onclick="copiar()" class="copiar">Copiar</button>
+            </div>
+        </section>
+            <script>
+            function encriptar() {
+                var texto = document.querySelector(".casilla-de-texto").value;
+                var textoCifrado = texto.replace(/e/gi, "enter").replace(/i/gi, "imes").replace(/a/gi, "ai").replace(/o/gi, "ober").replace(/u/gi, "ufat");
+                document.querySelector(".mensaje-mostrado").value = textoCifrado;
+                document.querySelector("#boton-encriptar").value;
+            }
+            function desencriptar() {
+                var texto = document.querySelector(".casilla-de-texto").value;
+                var textoCifrado = texto.replace(/ai/gi, "a").replace(/enter/gi, "e").replace(/imes/gi, "i").replace(/ober/gi, "o").replace(/ufat/gi, "u");
+                document.querySelector(".mensaje-mostrado").value = textoCifrado;
+                document.querySelector("#boton-desencriptar").value;
+            }
+            function copiar() {
+                var mensajeMostrado = document.querySelector(".mensaje-mostrado").value;
+                navigator.clipboard.writeText(mensajeMostrado);
+            }
+        </script>
+    </body>
 
-        function copiar() {
-            var mensajeMostrado = document.querySelector(".mensaje-mostrado").value;
-            navigator.clipboard.writeText(mensajeMostrado);
-        }
-    </script>
-</body>
-<footer>
-</footer>
+    <footer>
 
+    </footer>
 </html>
