Style del background de mensaje-mostrado mejorado. Agregado padding a textarea

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="fondo-de-mensaje">
                 <div class="mensaje">
                     <textarea class="mensaje-mostrado" disabled></textarea>
-                </div>    
-            </div>
-            <div class="boton-copiar">
-                <button onclick="copiar()" class="copiar">Copiar</button>
+                    <div class="copiar">
+                        <button onclick="copiar()" class="boton-copiar">Copiar</button>    
+                    </div>
+                </div>
             </div>
         </section>
             <script>
